push purge log to event bus

--- a/fixtures/buildspec/preparation_account_template.yaml
+++ b/fixtures/buildspec/preparation_account_template.yaml
@@ -20,6 +20,7 @@ env:
     BUDGET_AMOUNT: 500.0
     BUDGET_EMAIL: a@b.com
     BUDGET_NAME: SPA-budget
+    ENVIRONMENT_IDENTIFIER: None
     EVENT_BUS_ARN: None
     TOPIC_ARN: None
 
@@ -31,6 +32,7 @@ phases:
     - echo "BUDGET_AMOUNT=$BUDGET_AMOUNT"
     - echo "BUDGET_EMAIL=$BUDGET_EMAIL"
     - echo "BUDGET_NAME=$BUDGET_NAME"
+    - echo "ENVIRONMENT_IDENTIFIER=$ENVIRONMENT_IDENTIFIER"
     - echo "EVENT_BUS_ARN=$EVENT_BUS_ARN"
     - echo "TOPIC_ARN=$TOPIC_ARN"
 
