--- a/fixtures/buildspec/purge_account_with_awsweeper_template.yaml
+++ b/fixtures/buildspec/purge_account_with_awsweeper_template.yaml
@@ -48,106 +48,82 @@ phases:
       us-east-1
       EOF
     # full list of resource types at https://github.com/jckuester/awsweeper#supported-resources
-    - echo "Wave 1 - Purge resources without tags, or with tag '${TAG_KEY}'='${TAG_VALUE}'" | tee -a awsweeper.log
+    - echo "Wave 1 - Purge resources with tag '${TAG_KEY}'='${TAG_VALUE}'" | tee -a awsweeper.log
     - |
       cat <<EOF > filter.yaml
       aws_cloudformation_stack:
       - id: NOT((stack/StackSet-AWSControlTowerBP|CDKToolkit))
-        tagged: false
-      - tags:
+        tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_dynamodb_global_table:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_dynamodb_table:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_rds_cluster:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_rds_global_cluster:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_db_instance:  # rds
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_db_snapshot:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_ebs_snapshot:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_ebs_volume:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_ecs_cluster:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_efs_file_system:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_eip:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_eks_cluster:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_fsx_lustre_file_system:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_fsx_windows_file_system:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_instance:  # ec2
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_kinesis_stream:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_lambda_function:
       - id: NOT(aws-controltower)
-        tagged: false
-      - tags:
+        tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_msk_cluster:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_redshift_cluster:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_route53_zone:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_sfn_state_machine:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_sns_topic:
       - id: NOT(aws-controltower)
-        tagged: false
-      - tags:
+        tags:
           ${TAG_KEY}: ${TAG_VALUE}
       aws_sqs_queue:
-      - tagged: false
       - tags:
           ${TAG_KEY}: ${TAG_VALUE}
       EOF
