distinguish (fast) unit tests from (slower) integration tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
 log_level = DEBUG
 markers =
-    wip: put this marker on tests related to work in progress.
+    unit_tests: put this marker on unit tests
+    integration_tests: put this marker on tests with complex setup
+    wip: put this marker on tests related to current work in progress
     slow: mark test as slow.
