--- a/fixtures/settings/settings-with-old-default-settings.yaml
+++ b/fixtures/settings/settings-with-old-default-settings.yaml
@@ -59,48 +59,50 @@ worker:
   #
   purge_buildspec_template_file: "fixtures/buildspec/purge_account_with_awsweeper_template.yaml"
 
-# default settings for accounts
-#
-default:
-
-  # added to every account, accross all organizational units, except if overriden
-  #
-  account_tags:
-    ManagementSystem: SPA
-
-  # default preparation settings
-  #
-  preparation:
-
-    # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-    #
-    feature: disabled
-
-    # passed to Codebuild project for the preparation of an account
-    #
-    variables:
-      ALERT_THRESHOLD: 80 # percentage of budget
-      BUDGET_AMOUNT: 500.0 # USD
-      BUDGET_NAME: SpaBudget
-
-  # default purge settings
-  #
-  purge:
-
-    # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-    #
-    feature: disabled
-
-    # passed to Codebuild project for the purge of an account
-    variables:
-      MAXIMUM_AGE: 9M  # '5d', '2w', '3M', '1y', etc.
-      PURGE_MODE: '--dry-run'  # '--dry-run' or '--force'
-      TAG_KEY: purge
-      TAG_VALUE: me
 
 # these are organizational units where accounts are managed by the solution
 #
 organizational_units:
+
+  # default settings for all organizational units
+  #
+  - identifier: 'default'
+
+    # added to every account, accross all organizational units, except if overriden
+    #
+    account_tags:
+      ManagementSystem: SPA
+
+    # default preparation settings
+    #
+    preparation:
+
+      # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
+      #
+      feature: disabled
+
+      # passed to Codebuild project for the preparation of an account
+      #
+      variables:
+        ALERT_THRESHOLD: 80 # percentage of budget
+        BUDGET_AMOUNT: 500.0 # USD
+        BUDGET_NAME: SpaBudget
+
+    # default purge settings
+    #
+    purge:
+
+      # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
+      #
+      feature: disabled
+
+      # passed to Codebuild project for the purge of an account
+      variables:
+        MAXIMUM_AGE: 9M  # '5d', '2w', '3M', '1y', etc.
+        PURGE_MODE: '--dry-run'  # '--dry-run' or '--force'
+        TAG_KEY: purge
+        TAG_VALUE: me
+
 
   # settings specific to accounts placed in this organizational unit
   #
@@ -187,6 +189,46 @@ organizational_units:
 # these are specific settings for individual accounts managed by the solution
 #
 accounts:
+
+  # default settings for all listed accounts
+  #
+  - identifier: 'default'
+
+    # added to every listed account
+    #
+    account_tags:
+      ManagementSystem: SPA
+
+    # default preparation settings
+    #
+    preparation:
+
+      # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
+      #
+      feature: disabled
+
+      # passed to Codebuild project for the preparation of an account
+      #
+      variables:
+        ALERT_THRESHOLD: 80 # percentage of budget
+        BUDGET_AMOUNT: 500.0 # USD
+        BUDGET_NAME: SpaBudget
+
+    # default purge settings
+    #
+    purge:
+
+      # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
+      #
+      feature: disabled
+
+      # passed to Codebuild project for the purge of an account
+      variables:
+        MAXIMUM_AGE: 9M  # '5d', '2w', '3M', '1y', etc.
+        PURGE_MODE: '--dry-run'  # '--dry-run' or '--force'
+        TAG_KEY: purge
+        TAG_VALUE: me
+
 
   # settings specific to this acount
   #
