create a new section for default settings as per #73

--- a/fixtures/settings/settings.yaml
+++ b/fixtures/settings/settings.yaml
@@ -61,7 +61,7 @@ worker:
 
 # default settings for accounts
 #
-default:
+defaults:
 
   # added to every account, accross all organizational units, except if overriden
   #
