--- a/fixtures/settings/settings.yaml
+++ b/fixtures/settings/settings.yaml
@@ -1,21 +1,16 @@
 # prefix for cloud resources and cloud stack
-#
 environment_identifier: SpaDemo
 
 # parameters for resources deployed in the automation account
-#
 automation:
 
   # the target account for the deployment of the solution
-  #
   account_id: "123456789012"
 
   # the target region for the deployment of the solution
-  #
   region: "eu-west-1"
 
   # this is displayed in the monitoring dashboard
-  #
   cockpit_markdown_text: |
     # Sustainable Personal Accounts Dashboard
     Currently under active development (beta)
@@ -26,19 +21,16 @@ automation:
   #
   maintenance_window_expression: "cron(0 18 ? * SAT *)"
 
-  # this role is assumed by Lambda functions either to list AWS accounts in the OU,
-  # or to tag AWS accounts
-  #
+  # this role is assumed by Lambda functions either to list AWS accounts in the OU, or to tag AWS accounts
   role_arn_to_manage_accounts: 'arn:aws:iam::222222222222:role/SpaAccountsManagementRole'
 
   # this role is assumed by Lambda functions to create CodeBuild projects and to start them
-  #
   role_name_to_manage_codebuild: 'AWSControlTowerExecution'
 
   # these tags are used on resources deployed in automation account
-  #
   tags:
-    CostCenter: 'shared'
+    cost-imputation: shared
+    account-manager: john.foo@acme.com
 
   # this defines the amount of text sent to logs
   # - allowed values: DEBUG, INFO, WARNING, ERROR, CRITICAL
@@ -48,7 +40,6 @@ automation:
 
 
 # parameters for resources deployed in managed accounts
-#
 worker:
 
   # this is the buildspec template for the preparation of an account managed by SPA
@@ -59,36 +50,27 @@ worker:
   #
   purge_buildspec_template_file: "fixtures/buildspec/purge_account_with_awsweeper_template.yaml"
 
-# default settings for accounts
-#
+# default settings for managed accounts
 defaults:
 
   # added to every account, accross all organizational units, except if overriden
-  #
   account_tags:
-    ManagementSystem: SPA
+    managed-by: SPA
 
-  # default preparation settings
-  #
-  preparation:
+  preparation: # of managed accounts
 
     # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-    #
     feature: disabled
 
     # passed to Codebuild project for the preparation of an account
-    #
     variables:
       ALERT_THRESHOLD: 80 # percentage of budget
       BUDGET_AMOUNT: 500.0 # USD
       BUDGET_NAME: SpaBudget
 
-  # default purge settings
-  #
-  purge:
+  purge: # of expired accounts
 
     # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-    #
     feature: disabled
 
     # passed to Codebuild project for the purge of an account
@@ -99,40 +81,30 @@ defaults:
       TAG_VALUE: me
 
 # these are organizational units where accounts are managed by the solution
-#
 organizational_units:
 
   # settings specific to accounts placed in this organizational unit
-  #
   - identifier: 'ou-1234'
     note: 'a container for some accounts'
 
     # added to every account
-    #
     account_tags:
-      CostCenter: 'abc'
-      Sponsor: 'Foo Bar'
-      "account:manager": foo.bar@acme.com
+      cost-imputation: 'abc'
+      cost-center: 'Foo Bar'
+      account-manager: foo.bar@acme.com
 
-    # preparation of assigned account
-    #
-    preparation:
+    preparation: # of managed accounts
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: enabled
 
       # passed to Codebuild project for the preparation of an account
-      #
       variables:
         BUDGET_NAME: DataTeamBudget
 
-    # purge of expired account
-    #
-    purge:
+    purge: # of expired accounts
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: enabled
 
       # passed to Codebuild project for the purge of an account
@@ -141,43 +113,33 @@ organizational_units:
         PURGE_MODE: '--dry-run'  # '--dry-run' or '--force'
 
   # settings specific to accounts placed in this organizational unit
-  #
   - identifier: 'ou-5678'
     note: 'another account container'
 
     # added to every account
-    #
     account_tags:
-      CostCenter: 'xyz'
-      Sponsor: 'Mister Jones'
-      "account:manager": jones@acme.com
+      cost-imputation: 'xyz'
+      cost-center: 'Mister Jones'
+      account-manager: jones@acme.com
 
-    # preparation of assigned account
-    #
-    preparation:
+    preparation: # of managed accounts
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: disabled
 
       # passed to Codebuild project for the preparation of an account
-      #
       variables:
         ALERT_THRESHOLD: 90 # percentage of budget
         BUDGET_AMOUNT: 300 # USD
         BUDGET_NAME: DevelopmentTeamBudget
 
 
-    # purge of expired account
-    #
-    purge:
+    purge: # of expired accounts
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: disabled
 
       # passed to Codebuild project for the purge of an account
-      #
       variables:
         MAXIMUM_AGE: 1w  # '5d', '2w', '3M', '1y', etc.
         PURGE_MODE: '--force'  # '--dry-run' or '--force'
@@ -185,82 +147,62 @@ organizational_units:
         TAG_VALUE: test
 
 # these are specific settings for individual accounts managed by the solution
-#
 accounts:
 
   # settings specific to this acount
-  #
   - identifier: '123456789012'
     note: 'one specific account'
 
     # added to this account
-    #
     account_tags:
-      CostCenter: 'SB-123'
-      Sponsor: 'Alice'
-      "account:manager": alice@acme.com
+      cost-imputation: 'SB-123'
+      cost-center: 'Alice'
+      account-manager: alice@acme.com
 
-    # preparation of this account
-    #
-    preparation:
+    preparation: # of this account
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: enabled
 
       # passed to Codebuild project for the preparation of this account
-      #
       variables:
         ALERT_THRESHOLD: 90 # percentage of budget
         BUDGET_AMOUNT: 3000 # USD
         BUDGET_NAME: SpecificAliceBudget
 
-    # purge of expired account
-    #
-    purge:
+    purge: # of this account
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: disabled
 
   # settings specific to accounts placed in this organizational unit
-  #
   - identifier: '210987654321'
     note: 'another specific account'
 
-    # added to every account
-    #
+    # added to this account
     account_tags:
-      CostCenter: 'SB-456'
-      Sponsor: 'Bob'
-      "account:manager": bob@acme.com
+      cost-imputation: 'SB-456'
+      cost-center: 'Bob'
+      account-manager: bob@acme.com
 
-    # preparation of assigned account
-    #
-    preparation:
+    preparation: # of this account
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: enabled
 
       # passed to Codebuild project for the preparation of an account
-      #
       variables:
         ALERT_THRESHOLD: 90 # percentage of budget
         BUDGET_AMOUNT: 4000 # USD
         BUDGET_NAME: SpecificBobBudget
 
 
-    # purge of expired account
-    #
-    purge:
+    purge: # of this account
 
       # processing is skipped if not enabled explicitly - 'enabled' or 'disabled'
-      #
       feature: disabled
 
 # additional features that can be activated optionnally
-#
 features:
 
   # use ARM architecture for Lambda and for Codebuild projects instead of Intel/AMD architecture
