--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
-    "@aws-cdk/assert": "^2.0.0-rc.1",
-    "aws-cdk-lib": "^2.0.0-rc.1",
-    "constructs": "^10.0.0",
-    "@marp-team/marp-cli": "^1.5.2"
+    "@marp-team/marp-cli": "^1.5.2",
+    "aws-cdk": "^2.69.0",
+    "constructs": "^10.0.0"
   }
 }
