add nat gateways to resources that should be purged after some time

--- a/fixtures/buildspec/purge_account_with_awsweeper_template.yaml
+++ b/fixtures/buildspec/purge_account_with_awsweeper_template.yaml
@@ -166,6 +166,9 @@ phases:
       aws_db_instance:
       - created:
           before: ${MAXIMUM_AGE}
+      aws_nat_gateway:
+      - created:
+          before: ${MAXIMUM_AGE}
       EOF
     - |
       while read REGION
