align with reference .gitignore used at Reply

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,90 @@
-.DS_Store
-.coverage
+# this project
+/cdk.out
+/lambdas.out
 settings.yaml
-/.vscode
+/settings
 /PITCHME.html
 /PITCHME.pdf
 /PITCHME.pptx
-/cdk.out
-/lambdas/sustainable_personal_accounts.egg-info
-/media/.$*
+
+# draw.io
+*.drawio.bkp
+
+# terraform
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+
+# python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+*.manifest
+*.spec
+pip-log.txt
+pip-delete-this-directory.txt
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# node
 /node_modules
-/lambdas.out
 /package-lock.json
-/settings
-/venv
+
+# virtual studio
+/.vscode
+
+# internationalization (i18n)
+*.mo
+*.pot
+
+# spurious files from operating system
+.DS_Store
+
+
